# agent_design

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  USAGE.md  api_server.py  cline_config.json  database.py  docker-compose.yml  main.py  mcp_server.py  models.py  push-to-github.sh  pyproject.toml  readme  requirements.txt  run_tests.py  setup.py  test_server.py
.cline/: MCP_QUICK_REFERENCE.md
.cline/rules/: cline_mcp_integration.md  mcp_recording.md
.cline/workflows/: complete_task_recording.md  full_task_with_recording.md  get_task_analytics.md  record_interaction.md  record_performance_metric.md  record_tool_call.md  start_task_recording.md
.github/workflows/: ci.yml  release.yml
config/: default.yaml
config/sql/: ddl.sql
docs/: RL_Train_GraphRAG_Design_CN.md  design-iteration-1.md  design-iteration-2.md  design-langgraph-devops-agents.md  design-optimization-summary.md  iteration-split-summary.md
docs/prompts/: alarm.md  kpi.md  log.md  planner.md  summary.md
examples/: example_requests.json  example_websocket.html
scripts/: start.sh
src/: __init__.py  app.py  cli.py  config.py
src/api/: __init__.py  models.py  routes.py  websocket.py
src/graph/: __init__.py  builder.py  state.py
src/graph/nodes/: __init__.py  alarm_agent.py  base.py  (+5 more)
src/services/: __init__.py  database.py  repository.py
src/tools/: __init__.py  mcp_bridge.py  mcp_client.py
tests/: __init__.py  conftest.py  test_config.py
tests/e2e/: test_workflow.py
tests/integration/: test_api.py
tests/unit/: test_repository.py  test_state.py
